--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="Stopwatch"
+        android:label="SwiftLap"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
