--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: app_with_bloc
-description: "A Stopwatch with a lof of advantages"
+description: "Stopwatch app with precise time tracking, lap saving, and
+  customizable themes."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+2
+version: 1.0.6+8
 
 environment:
   sdk: ^3.5.1
@@ -42,6 +43,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   test: ^1.25.7
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
